   - implemented elapsed_units : weeks, days, hours, minutes, seconds : 1-arg function reporting elapsed time for specific value in database within range - improves accuracy for values/<time>
   - fixed function calculations converting '' to 0.00 on () calculation and Fn2argOp calculations -- stops many fn graphs from arbitrarily starting at 0
   - fixed lines+dots first point not drawn correctly -- dumped dotslines(), replaced with flag for lines() plotter
   - filter bad filename characters from write file names and when creating tracker

23 feb 2016
   - bad csv date file left spinner running, fixed
   - tried to improve date/timestamp format for excel but seems basically hopeless
   - fix FnTimeOp values to return nil for first entry

27 feb 2016
   - archived rTracker 2.0.9 6037
   - archived rTrackerA 2.09 5710

13 apr 2016
   - added new license alert to rTracker with preference to accept permanently
   - added 'rTrackerA is going away' alert to rTrackerA

14 apr 2016
   - fixed display of startup alerts to eliminate warning messages
   - disable badging application if notifications not allowed (fix warning)
   - remove GSTouches and Fabric/Crashlytics for Github release
   - add Apache license text, README.md and put website under Documentation/realidata-website

18 apr 2016
   - final cahges to 3.0.0, submitted to Apple
   

* try application loader for app submission - xcode -> open developer tool -> application loader
 - in organizer window, choose 'export' after creating archive, then ... for app store deployment
 
todo: make csv split date and time columns so excel can handle — need to read in old version 

todo: replace all export gui stuff with share menu and maybe airdrop
todo: add 'no graph' as graph type and lose 'draw graph' checkbox

+ add -[n] entries thing
+ add entry_count as a fn piece -- count of entries over range, so avg could be sum()/entry_count



