@@ -1233,12 +1233,13 @@ BOOL loadingInputFiles=NO;
     [rTracker_resource setSeparateDateTimePicker:[sud boolForKey:@"separate_date_time_pref"]];
     [rTracker_resource setRtcsvOutput:[sud boolForKey:@"rtcsv_out_pref"]];
     [rTracker_resource setSavePrivate:[sud boolForKey:@"save_priv_pref"]];
-    [rTracker_resource setAcceptLicense:[sud boolForKey:@"accept_license_pref"]];
+
     //[rTracker_resource setHideRTimes:[sud boolForKey:@"hide_rtimes_pref"]];
     //[rTracker_resource setSCICount:(NSUInteger)[sud integerForKey:@"shortcut_count_pref"]];
     
     [rTracker_resource setToldAboutSwipe:[sud boolForKey:@"toldAboutSwipe"]];
     [rTracker_resource setToldAboutNotifications:[sud boolForKey:@"toldAboutNotifications"]];
+    [rTracker_resource setAcceptLicense:[sud boolForKey:@"acceptLicense"]];
     
     //DBGLog(@"entry prefs-- resetPass: %d  reloadsamples: %d",resetPassPref,reloadSamplesPref);
 
