@@ -2053,9 +2053,12 @@ TODO: regen all .rtrks on website
    - add Apache license text, README.md and put website under Documentation/realidata-website
 
 18 apr 2016
-   - final cahges to 3.0.0, submitted to Apple
+   - final changes to 3.0.0, submitted to Apple
    
-
+03 may 2016
+   - fix display license agreement at every restart -- typo and race condition
+   
+   
 * try application loader for app submission - xcode -> open developer tool -> application loader
  - in organizer window, choose 'export' after creating archive, then ... for app store deployment
  
